<resources>
    <string name="app_name">TalkTracer</string>

    <string name="welcome_text" formatted="false">Recording conversations without consent
        is illegal in many states. Ask for consent before using this app.\n
        \nThis app records conversations and calculates how much each
        person spoke.  It is under construction.  It does not perform well on long conversations, due to the complex computation required, nor on noisy ambients.\n
        \nPress Record to start the , and to reset the tally, press "RESET".\n
        \nWhen the meeting is over, press "FINISH" to see the final tally.\n
    </string>
    <string name="menuTutorial">Great! Before we go on click this menu to see more options</string>
    <string name="menu1Tutorial">click outside menu area to close.</string>
    <string name="playTutorial">Hi click this and start talking, it would be better if </string>
    <string name="pauseTutorial">Now click this to when you are done talking</string>
    <string name="resetTutorial">Whoops didnt like your recording? Click here to reset!</string>
    <string name="play1Tutorial">Record your conversation one more time! </string>
    <string name="play2Tutorial">Just a heads up you can stop the recording and continue recording so click play Record more :)</string>
    <string name="finishTutorial">Phew that was exausting but were done! Hit finish to continue.</string>
    <string name="tutorial">Tutorial</string>
    <string name="previous">Previous Stats</string>
    <string name="menu">menu</string>
    <string name="total_time">Total</string>
    <string name="launch_recording_activity">Got it!</string>
    <string name="seconds">TIME IN SECONDS</string>
    <string name="button_finish">finish</string>
    <string name="colour">colour</string>
    <string name="button_pause">PAUSE</string>
    <string name="button_record">RECORD</string>
    <string name="button_reset">reset</string>
    <string name="performing_diarization">Analyzing Meeting</string>
    <string name="percentage">%SPK</string>
    <string name="button_new_meeting">New Meeting</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="button_share">Share</string>
    <string name="button_listen">Play recording</string>
    <string name="text_duration_header">Duration</string>
    <string name="hmmss">(H:MM:SS)</string>
    <string name="hmmsss">(H:MM:SS.s)</string>
    <string name="text_max_header">Max</string>
    <string name="text_min_header">Min</string>
    <string name="text_average_header">Average</string>
    <string name="speaker_name_title">SPKR</string>
    <string name="speaker_barchart_title">Color</string>
    <string name="speaker_time_title">H:MM:SS</string>
    <string name="play_meeting_wav">Replay Meeting</string>
    <string name="launch_main_activity">Show Splash Screen</string>
    <string name="show_raw_file">Show .raw File</string>
    <string name="show_wav_file">Show .wav File</string>
    <string name="show_mfc_file">Show .mfc File</string>
    <string name="show_uem_seg_file">Show .uem.seg File</string>
    <string name="show_s_seg_file">Show .s.seg File</string>
    <string name="show_l_seg_file">Show .l.seg File</string>
    <string name="launch_about_activity">About</string>
    <string name="drawer_title">Advanced</string>
    <string name="percent_graph">Percentage of time spoken</string>
    <string name="piano_title">SPKR H:MM:SS</string>
    <string name="zero">| | | | | | | | | | | </string>
    <string name="zero1">| | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | | |</string>
    <string name="startzero">0</string>
    <string name="hundred">100</string>

    <string name="recording_service">Recording</string>

    <string name="about_version">version</string>
    <string name="about_text" formatted="false">
        This app is based and use many open source library as LIUM (for Diarization), Sphinx and HoloGraphic (for the Graphs).
        \n\nThis application was initiated during the Loyola Summer Research Program in 2016 with the help of Dr. Mark Albert.
        </string>

</resources>
