<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recording_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.widget.Toolbar

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:subtitleTextColor="#000000"
        android:background="@android:color/holo_orange_dark"
        android:titleTextColor="#000000"
        android:title="@string/app_name" > <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="#FFF"
            android:layout_weight="1"
            android:textStyle="bold|italic"
            android:textSize="17sp"
            android:text="TRACING YOUR TALK"/>

        <Button
            android:id="@+id/menu"
            android:background="@android:color/holo_orange_dark"
            android:textColor="#FFF"
            android:text="@string/menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout></android.widget.Toolbar>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/speaker_name_title" />

    <GridLayout
        android:id="@+id/scroll_grid_layout"
        android:layout_width="385dp"
       android:layout_height="58dp"
        android:columnCount="2"
        >

        <ScrollView
            android:id="@+id/scroll_online"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <GridLayout
                    android:columnCount="1"
                    android:id="@+id/speaker_online"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </GridLayout>
            </LinearLayout>
        </ScrollView>

        <HorizontalScrollView
            android:id="@+id/horizScrlOnline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp">
    
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <GridLayout
                    android:id="@+id/online_time"
                    android:columnCount="1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                </GridLayout>

            </LinearLayout>
        </HorizontalScrollView>
    </GridLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/big_speaker_circle" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/red_circle" />

        <TextView
            android:id="@+id/button_pause_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="280dp"
            android:text="@string/button_pause"
            android:textColor="#404040"
            android:textSize="24sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/button_record_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="280dp"
            android:text="@string/button_record"
            android:textColor="#404040"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/button_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:onClick="clickPause"
            android:src="@drawable/white_pause"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/button_record"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:onClick="clickRecord"
            android:src="@drawable/white_play" />

    </RelativeLayout>

    <TextView
        android:id="@+id/meeting_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="#4a4a4a"
        android:textSize="48sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Button
            android:id="@+id/button_reset"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/white_reset"
            android:onClick="reset"
            android:text="@string/button_reset" />

        <Button
            android:id="@+id/button_finish"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/black_square"
            android:onClick="summary"
            android:text="@string/button_finish" />

    </LinearLayout>
</LinearLayout>

</android.support.v4.widget.DrawerLayout>