<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
                                        xmlns:tools="http://schemas.android.com/tools"
                                        android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main content view -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="25dp"

        android:weightSum="100">

        <!--<ScrollView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="20">-->
        <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:orientation="vertical">-->
        <!--<com.loyola.talktracer.view.TimeBar-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:fillColor="#00FFFF"/>-->
        <!--<com.loyola.talktracer.view.TimeBar-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:fillColor="#FF00FF"/>-->
        <!--</LinearLayout>-->
        <!--</ScrollView>-->
        <!-- graph sibling to ScroolView -->
        <!-- <com.echo.holographlibrary.PieGraph
             android:id="@+id/graph"
             android:layout_width="wrap_content"
             android:layout_height="74dp"
             android:background="#f44265"
             /> -->

        <!--text box displaying user info-->


        <ScrollView
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:layout_weight="23.75"
            android:weightSum="100"

            tools:layout_editor_absoluteY="106dp"
            tools:layout_editor_absoluteX="8dp">

            <GridLayout
                android:id="@+id/speaker_duration_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:paddingTop="5dp"
                android:useDefaultMargins="true"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speaker_name_title"
                    android:textStyle="bold"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/speaker_time_title"
                    android:textStyle="bold"


                    />
            </GridLayout>
        </ScrollView>

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:layout_weight="50"
            tools:layout_editor_absoluteY="106dp"
            tools:layout_editor_absoluteX="0dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:id="@+id/timeGraph">
            </LinearLayout>
        </HorizontalScrollView>


        <!--Buttons on the bottom of the screen-->

        <GridLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:layout_weight="10"
            tools:layout_editor_absoluteY="106dp"
            tools:layout_editor_absoluteX="0dp">

        </GridLayout>

        <Button
            android:id="@+id/button_new_meeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:onClick="newMeeting"
            android:text="@string/button_new_meeting"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.176"
            app:layout_constraintVertical_bias="0.838"/>

        <Button
            android:id="@+id/button_share"
            android:layout_width="104dp"
            android:layout_height="46dp"
            android:layout_columnWeight="1"
            android:onClick="share"
            android:text="@string/button_share"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.825"
            app:layout_constraintVertical_bias="0.844"/>

    </android.support.constraint.ConstraintLayout>

    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:orientation="vertical"-->
        <!--android:paddingTop="25dp"-->

        <!--android:weightSum="100">-->

        <!--&lt;!&ndash;<ScrollView&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;android:layout_weight="20">&ndash;&gt;-->
            <!--&lt;!&ndash;<LinearLayout&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
                <!--&lt;!&ndash;android:orientation="vertical">&ndash;&gt;-->
                <!--&lt;!&ndash;<com.loyola.talktracer.view.TimeBar&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
                    <!--&lt;!&ndash;app:fillColor="#00FFFF"/>&ndash;&gt;-->
                <!--&lt;!&ndash;<com.loyola.talktracer.view.TimeBar&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
                    <!--&lt;!&ndash;app:fillColor="#FF00FF"/>&ndash;&gt;-->
            <!--&lt;!&ndash;</LinearLayout>&ndash;&gt;-->
        <!--&lt;!&ndash;</ScrollView>&ndash;&gt;-->
        <!--&lt;!&ndash; graph sibling to ScroolView &ndash;&gt;-->
       <!--&lt;!&ndash; <com.echo.holographlibrary.PieGraph-->
            <!--android:id="@+id/graph"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="74dp"-->
            <!--android:background="#f44265"-->
            <!--/> &ndash;&gt;-->

        <!--&lt;!&ndash;text box displaying user info&ndash;&gt;-->


        <!--<ScrollView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="23.75"-->
            <!--android:weightSum="100"-->

            <!--&gt;-->

            <!--<GridLayout-->
                <!--android:id="@+id/speaker_duration_grid"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:columnCount="2"-->
                <!--android:paddingTop="5dp"-->
                <!--android:useDefaultMargins="true"-->
                <!--&gt;-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/speaker_name_title"-->
                    <!--android:textStyle="bold"/>-->


                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="right"-->
                    <!--android:text="@string/speaker_time_title"-->
                    <!--android:textStyle="bold"-->


                    <!--/>-->
            <!--</GridLayout>-->
        <!--</ScrollView>-->

        <!--<HorizontalScrollView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingTop="25dp"-->
            <!--android:layout_weight="50">-->
            <!--<LinearLayout-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="match_parent"-->
                <!--android:orientation="vertical"-->
                <!--android:id="@+id/timeGraph">-->
            <!--</LinearLayout>-->
        <!--</HorizontalScrollView>-->


        <!--&lt;!&ndash;Buttons on the bottom of the screen&ndash;&gt;-->

        <!--<GridLayout-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:columnCount="2"-->
            <!--android:layout_weight="10">-->

            <!--<Button-->
                <!--android:id="@+id/button_new_meeting"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_columnWeight="1"-->
                <!--android:onClick="newMeeting"-->
                <!--android:text="@string/button_new_meeting" />-->

            <!--<Button-->
                <!--android:id="@+id/button_share"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_columnWeight="1"-->
                <!--android:onClick="share"-->
                <!--android:text="@string/button_share" />-->
        <!--</GridLayout>-->
    <!--</LinearLayout>-->

    <!-- The navigation drawer -->
    <android.support.design.widget.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:choiceMode="singleChoice"
        app:headerLayout="@layout/drawer_header"
        app:menu="@menu/drawer" />
    </android.support.v4.widget.DrawerLayout>